--- a/AuthModule/pom.xml
+++ b/AuthModule/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>MedEx</artifactId>
+        <groupId>ua.edu.viti</groupId>
+        <version>0.1</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ua.edu.viti</groupId>
-    <artifactId>MedEx</artifactId>
-    <packaging>pom</packaging>
-    <version>0.1</version>
-    <modules>
-        <module>AuthModule</module>
-    </modules>
+    <artifactId>AuthModule</artifactId>
 
 
 </project>
