--- a/AuthModule/pom.xml
+++ b/AuthModule/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>AuthModule</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
