drop operations added. rewrite session mechanism. changed db mapping due to server restart.

--- a/AuthModule/src/main/webapp/WEB-INF/shiro.ini
+++ b/AuthModule/src/main/webapp/WEB-INF/shiro.ini
@@ -1,8 +1,10 @@
 [main]
 credentialsMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
-# base64 encoding, not hex in this example:
 credentialsMatcher.storedCredentialsHexEncoded = false
 credentialsMatcher.hashIterations = 1024
 
 myRealm = ua.edu.viti.medex.auth.SecurityRealm
 myRealm.credentialsMatcher = $credentialsMatcher
+
+
+[roles]
