--- a/pom.xml
+++ b/pom.xml
@@ -6,25 +6,11 @@
 
     <groupId>ua.edu.viti</groupId>
     <artifactId>MedEx</artifactId>
-    <packaging>pom</packaging>
+    <packaging>war</packaging>
     <version>0.1</version>
     <modules>
         <module>AuthModule</module>
     </modules>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -88,6 +74,12 @@
             <version>5.1.3.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
+
         <!--Marshalling dependencies-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -141,7 +133,6 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.5</version>
         </dependency>
-
 
     </dependencies>
 </project>
