--- a/AuthModule/pom.xml
+++ b/AuthModule/pom.xml
@@ -5,9 +5,9 @@
     <parent>
         <artifactId>MedEx</artifactId>
         <groupId>ua.edu.viti</groupId>
-        <version>0.1</version>
+        <version>0.2</version>
     </parent>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>AuthModule</artifactId>
@@ -18,25 +18,24 @@
     </properties>
 
     <dependencies>
-        <!--Spring security dependencies-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.security</groupId>-->
-        <!--            <artifactId>spring-security-core</artifactId>-->
-        <!--            <version>${spring-security.version}</version>-->
-        <!--        </dependency>-->
+        <!--        Spring security dependencies-->
+        <!--                <dependency>-->
+        <!--                    <groupId>org.springframework.security</groupId>-->
+        <!--                    <artifactId>spring-security-core</artifactId>-->
+        <!--                    <version>${spring-security.version}</version>-->
+        <!--                </dependency>-->
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.security</groupId>-->
-        <!--            <artifactId>spring-security-web</artifactId>-->
-        <!--            <version>${spring-security.version}</version>-->
-        <!--        </dependency>-->
+        <!--                <dependency>-->
+        <!--                    <groupId>org.springframework.security</groupId>-->
+        <!--                    <artifactId>spring-security-web</artifactId>-->
+        <!--                    <version>${spring-security.version}</version>-->
+        <!--                </dependency>-->
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.security</groupId>-->
-        <!--            <artifactId>spring-security-config</artifactId>-->
-        <!--            <version>${spring-security.version}</version>-->
-        <!--            <scope>compile</scope>-->
-        <!--        </dependency>-->
-
+        <!--                <dependency>-->
+        <!--                    <groupId>org.springframework.security</groupId>-->
+        <!--                    <artifactId>spring-security-config</artifactId>-->
+        <!--                    <version>${spring-security.version}</version>-->
+        <!--                    <scope>compile</scope>-->
+        <!--                </dependency>-->
     </dependencies>
 </project>
