--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 
     <groupId>ua.edu.viti</groupId>
     <artifactId>MedEx</artifactId>
-    <packaging>war</packaging>
-    <version>0.1</version>
+    <packaging>pom</packaging>
+    <version>0.2</version>
     <modules>
         <module>AuthModule</module>
     </modules>
