--- a/AuthModule/pom.xml
+++ b/AuthModule/pom.xml
@@ -19,23 +19,23 @@
 
     <dependencies>
         <!--        Spring security dependencies-->
-        <!--                <dependency>-->
-        <!--                    <groupId>org.springframework.security</groupId>-->
-        <!--                    <artifactId>spring-security-core</artifactId>-->
-        <!--                    <version>${spring-security.version}</version>-->
-        <!--                </dependency>-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
 
-        <!--                <dependency>-->
-        <!--                    <groupId>org.springframework.security</groupId>-->
-        <!--                    <artifactId>spring-security-web</artifactId>-->
-        <!--                    <version>${spring-security.version}</version>-->
-        <!--                </dependency>-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
 
-        <!--                <dependency>-->
-        <!--                    <groupId>org.springframework.security</groupId>-->
-        <!--                    <artifactId>spring-security-config</artifactId>-->
-        <!--                    <version>${spring-security.version}</version>-->
-        <!--                    <scope>compile</scope>-->
-        <!--                </dependency>-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
