--- a/AuthModule/pom.xml
+++ b/AuthModule/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>MedEx</artifactId>
         <groupId>ua.edu.viti</groupId>
-        <version>0.2</version>
+        <version>0.4</version>
     </parent>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
@@ -15,27 +15,45 @@
 
     <properties>
         <spring-security.version>5.1.3.RELEASE</spring-security.version>
+        <jjwt.version>0.10.5</jjwt.version>
     </properties>
 
     <dependencies>
-        <!--        Spring security dependencies-->
+        <!--Spring security dependencies-->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!--JWT dependencies-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
