--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,16 @@
     <groupId>ua.edu.viti</groupId>
     <artifactId>MedEx</artifactId>
     <packaging>pom</packaging>
-    <version>0.2</version>
+    <version>0.4</version>
     <modules>
         <module>AuthModule</module>
     </modules>
+
+    <properties>
+        <logj4.version>2.6.1</logj4.version>
+        <slf4j.version>1.6.1</slf4j.version>
+        <spring.version>5.1.3.RELEASE</spring.version>
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -24,27 +30,27 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.6.1</version>
+            <version>${logj4.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.6.1</version>
+            <version>${logj4.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-web</artifactId>
-            <version>2.6.1</version>
+            <version>${logj4.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.6.1</version>
+            <version>${logj4.version}</version>
         </dependency>
 
         <!--Spring dependencies-->
@@ -65,19 +71,19 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.1.3.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>5.1.3.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
-            <version>5.1.3.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <!--Marshalling dependencies-->
@@ -132,6 +138,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
         </dependency>
 
     </dependencies>
