--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,18 @@
     <groupId>ua.edu.viti</groupId>
     <artifactId>MedEx</artifactId>
     <packaging>pom</packaging>
-    <version>0.4</version>
+    <version>0.5-beta-1</version>
     <modules>
         <module>AuthModule</module>
+        <module>MainModule</module>
     </modules>
 
     <properties>
         <logj4.version>2.6.1</logj4.version>
         <slf4j.version>1.6.1</slf4j.version>
         <spring.version>5.1.3.RELEASE</spring.version>
+        <spring-security.version>5.1.3.RELEASE</spring-security.version>
+        <jjwt.version>0.10.5</jjwt.version>
     </properties>
 
     <parent>
@@ -65,6 +68,7 @@
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion>
             </exclusions>
+            <scope>compile</scope>
         </dependency>
 
 
@@ -72,18 +76,21 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>${spring.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <!--Marshalling dependencies-->
@@ -146,5 +153,43 @@
             <version>2.8.5</version>
         </dependency>
 
+        <!--Spring security dependencies-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--JWT dependencies-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
