--- a/AuthModule/pom.xml
+++ b/AuthModule/pom.xml
@@ -5,10 +5,19 @@
     <parent>
         <artifactId>MedEx</artifactId>
         <groupId>ua.edu.viti</groupId>
-        <version>0.4</version>
+        <version>0.5-beta-1</version>
     </parent>
-    <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>ua.edu.viti</groupId>
+            <artifactId>MainModule</artifactId>
+            <version>0.5-beta-1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>AuthModule</artifactId>
+    <version>0.5-beta-1</version>
+    <packaging>jar</packaging>
 </project>
