--- a/AuthModule/pom.xml
+++ b/AuthModule/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>MedEx</artifactId>
         <groupId>ua.edu.viti</groupId>
-        <version>0.5-beta-1</version>
+        <version>RELEASE</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>ua.edu.viti</groupId>
             <artifactId>MainModule</artifactId>
-            <version>0.5-beta-1</version>
+            <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
