--- a/MainModule/pom.xml
+++ b/MainModule/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>MedEx</artifactId>
         <groupId>ua.edu.viti</groupId>
-        <version>0.5-beta-1</version>
+        <version>RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
